# proyectDW

./: README.md  bd_inventario.sql  main.py  pyproject.toml  run.py
FronDW/: sistema_get.html  sistema_get.js
config/: conexionDB.py
routes/: __init__.py  categoria.py  cliente.py  detalle_venta.py  producto.py  proveedor.py  venta.py
